# DSP

opdracht1/STUDENT/: dsbComplex.cpp
opdracht1/STUDENT/h/: dsbComplex.h  dsbRingBuffer.h
opdracht2/STUDENT/: gemwaarde.cpp  gemwaarde.h
opdracht2/STUDENT/expAverage/: CMakeLists.txt  expAverage.cpp  expAverage.h
opdracht3/STUDENT/: Signaal.wxg  signaal.cpp  signaal.h
opdracht4/STUDENT/filter/: CMakeLists.txt  firfilter.cpp  firfilter.h
opdracht4/STUDENT/ontwerper/: CMakeLists.txt  demofiltercoeffs.h  filterDesignerBasis.cpp  filterOntwerper.cpp  filterOntwerper.h
opdracht4/STUDENT/ontwerper/h/: filterDesignerBasis.h
opdracht5/STUDENT/: CMakeLists.txt  student.cpp
opdracht5/STUDENT/h/: firfilterexport.h  student.h
